frontend/tests/cases/negative/caseDischargeStyle.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/caseDischargeStyle.gr:7:3:
Variable `y` is used as graded variable, but it is bound as a linear variable.

Falsifiable theorem: frontend/tests/cases/negative/caseDischargeStyle.gr:13:1:
The following theorem associated with `fooB` is falsifiable:
	(((1 ⨱ 1)) -> ((0 : Nat) = 1) ∧ (1 = 1))